--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,10 +8,9 @@
     <meta name="description" content="To Do App using MERN Stack" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/todo-icon.jpg"" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>To Do App</title>
+    <title>To Dos App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
