--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/todo-icon.jpg" />
+    <link rel="icon" href="%PUBLIC_URL%/todo-png.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="To Do App using MERN Stack" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/todo-icon.jpg"" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/todo-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>T O D O</title>
   </head>
